Fixes Schedule module column gap

--- a/public/css/modules/schedule.lg.css
+++ b/public/css/modules/schedule.lg.css
@@ -1,7 +1,7 @@
 .schedule {
   display: grid;
   grid-template-columns: fit-content(5rem) 1fr;
-  grid-column-gap: var(--spacing-inline-sm);
+  column-gap: var(--margin-inline-md);
 }
 
 .schedule dt {
